# PokemonAgents

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/: platform.py
src/agents/: base.py  llm_agent.py  ppo_agent.py  random_agent.py  tool_agent.py
src/agents/hybrid/: __init__.py  orchestrator.py  skill_router.py
src/agents/hybrid/skills/: __init__.py  base_skill.py  battle.py  heal.py  navigate.py  pc_manage.py
src/agents/llm/: __init__.py  actions.py  battle_navigator.py  knowledge.py  menu_navigator.py  prompts.py  providers.py  tools.py  walkability.py
src/emulator/: memory_map.py  pyboy_wrapper.py
src/environment/: pokemon_env.py
src/environment/skill_envs/: __init__.py  base_skill_env.py  battle_env.py  heal_env.py  navigate_env.py  pc_env.py
src/executor/: action_executor.py
src/training/: run_model.py  train_rl.py  train_skill.py  train_visual.py  watch_rl.py
src/training/skill_configs/: battle.yaml  heal.yaml  navigate.yaml  pc_manage.yaml
src/ui/: spectator.py
src/utils/: state_manager.py
